# infinity_build

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  copy_to_rcd.py  infinity-desktop.py  infinity_desktop.py  init_rc_conf.py  install_base_services.py  install_packages.py  setup_home.py  update_rc_conf.py
tests/: data.py  pytest.ini
tests/unit/: test_install_packages.py
