[tool.poetry]
name = "infinity_build"
version = "0.1.0"
description = "Package to install Infinity desktop"
authors = ["Ron Georgia <rong1611@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
